<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/text_feedback"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_feedback_size" />

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_close" />

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/edtdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/frame"
            android:gravity="top"
            android:hint="@string/text_input_feedback"
            android:inputType="textMultiLine"
            android:lines="6"
            android:textColorHint="#746363" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="0.5"
                android:background="@drawable/frame"
                android:gravity="top"
                android:hint="@string/name_uses"
                android:inputType="textMultiLine"
                android:lines="1"
                android:textColorHint="#746363" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:background="@drawable/frame"
                    android:gravity="top"
                    android:hint="@string/text_email"
                    android:inputType="textMultiLine"
                    android:lines="1"
                    android:textColorHint="#746363" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:text="@string/text_satisfaction"
            android:textSize="@dimen/text_se_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_emoji_width"
                android:layout_height="@dimen/image_emoji_height"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:src="@mipmap/ic01" />

            <ImageView
                android:layout_width="@dimen/image_emoji_width"
                android:layout_height="@dimen/image_emoji_height"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:src="@mipmap/ic02" />

            <ImageView
                android:layout_width="@dimen/image_emoji_width"
                android:layout_height="@dimen/image_emoji_height"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:src="@mipmap/ic03" />

            <ImageView
                android:layout_width="@dimen/image_emoji_width"
                android:layout_height="@dimen/image_emoji_height"
                android:layout_marginEnd="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:src="@mipmap/ic04" />

            <ImageView
                android:layout_width="@dimen/image_emoji_width"
                android:layout_height="@dimen/image_emoji_height"
                android:src="@mipmap/ic05" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginStart="@dimen/margin"
            android:layout_weight="0.1"
            android:gravity="center|start"
            android:text="@string/name_se"
            android:textSize="@dimen/text_se_size" />

        <ImageButton
            android:id="@+id/btnsend"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:background="#afadad"
            android:src="@drawable/ic_send_black_24dp" />
    </LinearLayout>

</LinearLayout>